k8s/apps/base/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo
    spec:
      containers:
      - image: hashicorp/http-echo
        imagePullPolicy: IfNotPresent
        name: echo
        ports:
        - containerPort: 5678
        args:
        - text="${MESSAGE}"
        resources:
          limits:
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 300Mi
