k8s/apps/base/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: echo
spec:
  ports:
  - name: web
    port: 5678
    targetPort: 5678
    protocol: TCP
  selector:
    app.kubernetes.io/name: echo
